# OpenRM-2024-add-hik

include/video/hik/: MvCameraControl.h  hik_camera.h
src/video/: CMakeLists.txt  hik.cpp
